--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,20 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@atoms/*": ["src/components/atoms/*"],
+      "@molecules/*": ["src/components/molecules/*"],
+      "@organism/*": ["src/components/organism/*"],
+      "@templates/*": ["src/components/templates/*"],
+      "@assets/*": ["src/assets/*"]
+    },
+    
     "target": "es6",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -13,8 +26,14 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react"
+    "jsx": "preserve"
   },
-  "exclude": ["node_modules"],
-  "include": ["src", "react-app-env.d.ts"]
+  "exclude": [
+    "node_modules",
+    ".next"
+  ],
+  "include": [
+    "src",
+    "react-app-env.d.ts"
+  ]
 }
