--- a/package.json
+++ b/package.json
@@ -1,30 +1,31 @@
 {
-  "name": "yinventory",
-  "version": "0.1.0",
   "private": true,
+  "name": "my-nextron-app",
+  "description": "My application description",
+  "version": "1.0.0",
+  "author": "Yoshihide Shiono <shiono.yoshihide@gmail.com>",
+  "main": "app/background.js",
   "scripts": {
-    "dev": "next dev",
-    "start": "next start",
-    "build": "next build",
-    "test": "",
-    "eject": ""
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "dev": "nextron",
+    "build": "nextron build",
+    "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
-    "@zeit/next-sass": "^1.0.1",
-    "next": "^9.5.1",
-    "next-fonts": "^1.4.0",
-    "node-sass": "^4.14.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "electron-serve": "^1.0.0",
+    "electron-store": "^6.0.0"
   },
   "devDependencies": {
-    "@types/node-sass": "^4.11.1",
-    "@types/react": "^16.9.44",
-    "@types/react-dom": "^16.9.8",
-    "typescript": "^3.9.7"
+    "@babel/core": "^7.11.6",
+    "@emotion/core": "^10.0.35",
+    "@emotion/styled": "^10.0.27",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-emotion": "^10.0.33",
+    "electron": "^10.1.1",
+    "electron-builder": "^22.8.0",
+    "next": "9.3.6",
+    "nextron": "^5.15.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "webpack": "^4.44.1"
   }
 }
